--- a/RestauranteService/appsettings.json
+++ b/RestauranteService/appsettings.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "RestauranteConnection": "server=localhost;port=3306;database=restaurantedb;user=root;password=123456;Persist Security Info=False"
   },
-  "ItemService": "http://localhost:5001/api/item/restaurante"
+  "ItemService": "http://localhost:5001/api/item/restaurante",
+  "RabbitMqHost": "rabbitmq-service",
+  "RabbitPort": "8200"
 }
